// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MalcolmMiddlePanel renders a container only if the mainAttribute is not one of allowed type 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-plainBackground-7"
  >
    <div
      className="MiddlePanelContainer-tableContainer-6"
      style={
        Object {
          "left": 360,
          "width": "calc(100% - 360px)",
        }
      }
    />
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders a container only if the no widget tag found for mainAttribute 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-plainBackground-7"
  />
</div>
`;

exports[`MalcolmMiddlePanel renders alarmed correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-layoutArea-2"
  >
    <Connect(Layout) />
    <div
      className="MiddlePanelContainer-alarm-3"
      style={
        Object {
          "bottom": 12,
          "left": 389,
        }
      }
    >
      <WithTheme(AttributeAlarm)
        alarmSeverity={4}
      />
    </div>
    <div
      className="MiddlePanelContainer-paletteButton-5"
      style={
        Object {
          "bottom": 12,
          "right": 29,
        }
      }
    >
      <WithStyles(Button)
        color="secondary"
        onClick={[Function]}
        variant="fab"
      >
        <pure(Add) />
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders errored correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-layoutArea-2"
  >
    <Connect(Layout) />
    <div
      className="MiddlePanelContainer-alarm-3"
      style={
        Object {
          "bottom": 12,
          "left": 389,
        }
      }
    >
      <WithTheme(AttributeAlarm)
        alarmSeverity={2}
      />
    </div>
    <div
      className="MiddlePanelContainer-paletteButton-5"
      style={
        Object {
          "bottom": 12,
          "right": 29,
        }
      }
    >
      <WithStyles(Button)
        color="secondary"
        onClick={[Function]}
        variant="fab"
      >
        <pure(Add) />
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders layout correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-layoutArea-2"
  >
    <Connect(Layout) />
    <div
      className="MiddlePanelContainer-alarm-3"
      style={
        Object {
          "bottom": 12,
          "left": 389,
        }
      }
    >
      <WithTheme(AttributeAlarm)
        alarmSeverity={0}
      />
    </div>
    <div
      className="MiddlePanelContainer-paletteButton-5"
      style={
        Object {
          "bottom": 12,
          "right": 29,
        }
      }
    >
      <WithStyles(Button)
        color="secondary"
        onClick={[Function]}
        variant="fab"
      >
        <pure(Add) />
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders pending correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-layoutArea-2"
  >
    <Connect(Layout) />
    <div
      className="MiddlePanelContainer-alarm-3"
      style={
        Object {
          "bottom": 12,
          "left": 389,
        }
      }
    >
      <WithTheme(AttributeAlarm)
        alarmSeverity={-1}
      />
    </div>
    <div
      className="MiddlePanelContainer-paletteButton-5"
      style={
        Object {
          "bottom": 12,
          "right": 29,
        }
      }
    >
      <WithStyles(Button)
        color="secondary"
        onClick={[Function]}
        variant="fab"
      >
        <pure(Add) />
      </WithStyles(Button)>
    </div>
  </div>
</div>
`;

exports[`MalcolmMiddlePanel renders table correctly 1`] = `
<div
  className="MiddlePanelContainer-container-1"
  role="presentation"
>
  <div
    className="MiddlePanelContainer-plainBackground-7"
  >
    <div
      className="MiddlePanelContainer-tableContainer-6"
      style={
        Object {
          "left": 360,
          "width": "calc(100% - 360px)",
        }
      }
    >
      <Connect(WithTheme(TableContainer))
        attributeName="layout"
        blockName="test1"
        footerItems={
          Array [
            <WithStyles(Tooltip)
              id="1"
              placement="right"
              title=""
          >
              <WithStyles(IconButton)
                  className="MiddlePanelContainer-button-8"
                  disableRipple={true}
              >
                  <WithTheme(AttributeAlarm)
                      alarmSeverity={0}
                  />
              </WithStyles(IconButton)>
          </WithStyles(Tooltip)>,
          ]
        }
      />
    </div>
  </div>
</div>
`;
